[package]
name = "pqcrypto-sign-falcon"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.1"
num-complex = "0.4.6"
num = "0.4.3"
num-traits = "0.2.19"
bit-vec = "0.8.0"
rs_shake256 = "0.1.2"

[build-dependencies]
num-complex = "0.4.6"
modular_math = "0.1.6"
primitive-types = "0.12.2"
rayon = "1.10.0"
